--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:api": "jest",
+    "db:up": "cd .. && docker compose up -d",
+    "db:down": "cd .. && docker compose down -v",
+    "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset -f && npm run db:seed",
+    "db:seed": "prisma db seed",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
