--- a/frontend/env.local.example
+++ b/frontend/env.local.example
@@ -2,4 +2,7 @@
 NEXT_PUBLIC_API_BASE=http://localhost:3001
 NEXT_PUBLIC_FRONT_API_KEY=dev-secret
 
+const API = process.env.NEXT_PUBLIC_API_BASE!;
+const HEADERS = { 'x-api-key': process.env.NEXT_PUBLIC_FRONT_API_KEY! };
+
 # Note: This API key should match the BACKEND_API_KEY in your backend .env file
